# types-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: build.yml  publish.yml  test.yml  typo.yml
crates/felt-macro/: Cargo.toml
crates/felt-macro/src/: lib.rs
crates/stark-curve/: Cargo.toml
crates/stark-curve/src/: lib.rs
crates/stark-felt/: Cargo.toml  README.md
crates/stark-felt/src/: arbitrary.rs  arbitrary_proptest.rs  lib.rs
crates/starknet-types-core/: Cargo.toml  Makefile  README.md
crates/starknet-types-core/benches/: criterion_hashes.rs  criterion_pedersen.rs
crates/starknet-types-core/proptest-regressions/felt/: mod.txt
crates/starknet-types-core/src/: chain_id.rs  contract_address.rs  curve.rs  felt.rs  felt_arbitrary.rs  hash.rs  lib.rs  patricia_key.rs  regular_contract_address.rs
crates/starknet-types-core/src/chain_id/: alloc.rs  alloc_impls.rs  mod.rs
crates/starknet-types-core/src/curve/: affine_point.rs  curve_errors.rs  mod.rs  projective_point.rs  signer.rs
crates/starknet-types-core/src/felt/: alloc_impls.rs  arbitrary.rs  felt_arbitrary.rs  macro_impl.rs  mod.rs  non_zero.rs  num_traits_impl.rs  papyrus_serialization.rs  parity_scale_codec.rs  prime_bigint.rs  primitive_conversions.rs  qm31.rs  secret_felt.rs  serde.rs  zeroize.rs
crates/starknet-types-core/src/hash/: blake2s.rs  mod.rs  pedersen.rs  poseidon.rs  poseidon_hash.rs  traits.rs
crates/starknet-types-core/src/qm31/: mod.rs  num_traits_impl.rs
crates/starknet-types-core/src/short_string/: mod.rs
crates/starknet-types-core/src/u256/: mod.rs  num_traits_impl.rs  primitive_conversions.rs
crates/starknet-types-core/src/u256/tests/: from_dec_str.rs  from_hex_str.rs  mod.rs
crates/starknet-types-macros/: Cargo.toml
crates/starknet-types-macros/src/: lib.rs
crates/starknet-types-rpc/: Cargo.toml  Makefile  README.md  openrpc-gen
crates/starknet-types-rpc/configs/: spec_v0.5.0.json  v0.5.0.toml
crates/starknet-types-rpc/src/: block_id.rs  custom_serde.rs  lib.rs  syncing_status.rs
crates/starknet-types-rpc/src/custom/: block_id.rs  query.rs  syncing_status.rs
crates/starknet-types-rpc/src/custom_serde/: num_as_hex.rs
crates/starknet-types-rpc/src/v0_5_0/: block_id.rs  config.toml  mod.rs  query.rs  starknet_api_openrpc copy.toml  starknet_api_openrpc.json  starknet_api_openrpc.rs  starknet_api_openrpc.toml  starknet_trace_api_openrpc.json  starknet_trace_api_openrpc.rs  starknet_trace_api_openrpc.toml  starknet_write_api.json  syncing_status.rs
crates/starknet-types-rpc/src/v0_6_0/: block_id.rs  mod.rs  query.rs  starknet_api_openrpc.rs  starknet_trace_api_openrpc.json  starknet_trace_api_openrpc.rs  starknet_trace_api_openrpc.toml  starknet_write_api.rs  syncing_status.rs
crates/starknet-types-rpc/src/v0_7_1/: block_id.rs  generate.sh  mod.rs  query.rs  starknet_api_openrpc.rs  starknet_api_openrpc.toml  starknet_trace_api_openrpc.json  starknet_trace_api_openrpc.rs  starknet_trace_api_openrpc.toml  starknet_write_api.rs  starknet_write_api.toml  syncing_status.rs
crates/starknet-types-rpc/tests/: v0_5_0.rs
ensure_no_std/: Cargo.toml  rust-toolchain.toml
ensure_no_std/src/: main.rs
fuzz/: Cargo.toml  Makefile  README.md
fuzz/felt/: Cargo.toml
fuzz/felt/fuzz_targets/: add.rs  add_sub.rs  conversions.rs  div.rs  mul.rs  sub.rs
