[workspace]
members = [
    "crates/starknet-types-core",
    "crates/starknet-types-rpc",
]

exclude = ["ensure_no_std"]
resolver = "2"

[workspace.package]
authors = [
    "Shahar Papini <@spapinistarkware>",
    "Abdelhamid Bakhta <@abdelhamidbakhta>",
    "Dan Brownstein <@dan-starkware>",
    "Federico Carrone <@unbalancedparentheses>",
    "Jonathan Lei <@xJonathanLEI>",
]
edition = "2021"
repository = "https://github.com/starknet-io/types-rs"
