[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-types-core = { path = "../crates/starknet-types-core", default-features = false, features = [
    "alloc",
    "serde",
    "curve",
    "parity-scale-codec",
    "num-traits",
    "hash",
] }
wee_alloc = "0.4.5"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
