[package]
name = "stark-curve"
version = "0.0.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["types", "math", "crypto"]
keywords = ["stark", "zkp", "cairo"]
description = "A stark curve type for Cairo."
readme = "README.md"

[dependencies]
lambdaworks-math = { git = "https://github.com/Lambdaclass/lambdaworks.git" ,rev = "23154c1b2b7c1cb1620e40ee53fbb446a2923923", default_features = true }
num-traits = { version = "0.2.16", default-features = false }

stark-felt = {path = "../stark-felt"}

