[package]
name = "stark-felt"
version = "0.0.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["types", "math", "crypto"]
keywords = ["stark", "zkp", "cairo"]
description = "Field element type for Cairo."
readme = "README.md"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
serde = { version = "1.0.163", optional = true, default-features = false }
# TODO: use version once published
# lambdaworks-math = { version = "0.1.1", default-features = false }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "bfd91d4e8116ab8b0bf25f75a9f1e8bb61d355d9", default_features = false}
[features]
default = ["std", "serde"]
std = []
alloc = ["serde?/alloc"]

[dev-dependencies]
proptest = "1.1.0"
serde_test = "1.0.1"
