[package]
name = "starknet-types-core"
version = "0.1.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["mathematics", "cryptography"]
keywords = ["stark", "zkp", "cairo"]
description = "Core types representation for Starknet"
readme = "README.md"

[dependencies]
lambdaworks-math = { version = "0.7.0", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
num-integer = { version = "0.1.45", default-features = false }

# Optional
arbitrary = { version = "1.3.2", optional = true }
serde = { version = "1.0.197", optional = true, default-features = false, features = [
  "alloc",
] }
lambdaworks-crypto = { version = "0.7.0", default-features = false, optional = true }
parity-scale-codec = { version = "3.6.9", default-features = false, optional = true }
lazy_static = { version = "1.4.0", default-features = false, optional = true }

[features]
default = ["std", "serde", "curve", "num-traits"]
std = [
  "lambdaworks-math/std",
  "num-traits/std",
  "num-bigint/std",
  "num-integer/std",
  "serde?/std",
  "lambdaworks-crypto?/std",
]
alloc = []
curve = []
hash = ["dep:lambdaworks-crypto"]
arbitrary = ["std", "dep:arbitrary"]
parity-scale-codec = ["dep:parity-scale-codec"]
serde = ["alloc", "dep:serde"]
prime-bigint = ["dep:lazy_static"]
num-traits = []
papyrus-serialization = ["std"]

[dev-dependencies]
proptest = "1.4.0"
regex = "1.10.4"
serde_test = "1.0.176"
criterion = "0.5.1"
rand_chacha = "0.3.1"
rand = "0.8.5"
lazy_static = { version = "1.4.0", default-features = false }

[[bench]]
name = "criterion_hashes"
harness = false

