[package]
name = "starknet-types-core"
version = "0.1.7"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["mathematics", "cryptography"]
keywords = ["stark", "zkp", "cairo"]
description = "Core types representation for Starknet"
readme = "README.md"

[dependencies]
lambdaworks-math = { version = "0.10.0", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }

# Optional
arbitrary = { version = "1.3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = [
  "alloc",
] }
lambdaworks-crypto = { version = "0.10.0", default-features = false, optional = true }
parity-scale-codec = { version = "3.6", default-features = false, optional = true }
lazy_static = { version = "1.5", default-features = false, optional = true }

[features]
default = ["std", "serde", "curve", "num-traits"]
std = [
  "lambdaworks-math/std",
  "num-traits/std",
  "num-bigint/std",
  "num-integer/std",
  "serde?/std",
  "lambdaworks-crypto?/std",
]
alloc = []
curve = []
hash = ["dep:lambdaworks-crypto"]
arbitrary = ["std", "dep:arbitrary"]
parity-scale-codec = ["dep:parity-scale-codec"]
serde = ["alloc", "dep:serde"]
prime-bigint = ["dep:lazy_static"]
num-traits = []
papyrus-serialization = ["std"]

[dev-dependencies]
proptest = "1.5"
regex = "1.11"
serde_test = "1"
criterion = "0.5"
rand_chacha = "0.3"
rand = "0.8"
lazy_static = { version = "1.5", default-features = false }

[[bench]]
name = "criterion_hashes"
harness = false
