[package]
name = "starknet-types-core"
version = "1.0.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["mathematics", "cryptography"]
keywords = ["stark", "zkp", "cairo"]
description = "Core types representation for Starknet"
readme = "README.md"

[dependencies]
lambdaworks-math = { version = "0.13.0", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }

# Optional
arbitrary = { version = "1.3", optional = true }
blake2 = { version = "0.10.6", default-features = false, optional = true }
digest = { version = "0.10.7", optional = true }
serde = { version = "1", optional = true, default-features = false, features = [
    "alloc", "derive"
] }
lambdaworks-crypto = { version = "0.13.0", default-features = false, optional = true }
parity-scale-codec = { version = "3.6", default-features = false, optional = true }
lazy_static = { version = "1.5", default-features = false, optional = true }
zeroize = { version = "1.8.1", default-features = false, optional = true }
subtle = { version = "2.6.1", default-features = false, optional = true }
rand = { version = "0.9.2", default-features = false, optional = true }

# TODO: in the future remove this dependency to allow upstream crates to use version 1.X.X of generic-array
generic-array = { version = ">=0.14.0, <=0.14.7", default-features = false }

[features]
default = ["std", "serde", "curve", "num-traits"]
std = [
    "alloc",
    "lambdaworks-math/std",
    "num-traits/std",
    "num-bigint/std",
    "num-integer/std",
    "serde?/std",
    "lambdaworks-crypto?/std",
    "zeroize?/std",
    "rand?/std"
]
alloc = ["zeroize?/alloc"]
curve = []
hash = ["dep:lambdaworks-crypto", "dep:blake2", "dep:digest"]
arbitrary = ["std", "dep:arbitrary"]
parity-scale-codec = ["dep:parity-scale-codec"]
serde = ["alloc", "dep:serde"]
prime-bigint = ["dep:lazy_static"]
num-traits = []
apollo-serialization = ["std"]
secret-felt = ["alloc", "dep:zeroize", "dep:subtle", "subtle/const-generics", "subtle/core_hint_black_box", "dep:rand", "rand/alloc"]

[dev-dependencies]
proptest = { version = "1.5", default-features = false, features = [
    "alloc",
    "proptest-macro",
] }
regex = "1.11"
serde_test = "1"
criterion = "0.5"
rand_chacha = "0.9"
rand = "0.9.2"
rstest = "0.24"
lazy_static = { version = "1.5", default-features = false }
bincode = "1"

[[bench]]
name = "criterion_hashes"
harness = false
required-features = ["hash"]
