[package]
name = "starknet-types-rpc"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["types", "math", "crypto"]
keywords = ["stark", "zkp", "cairo"]
description = "Starknet RPC types."
readme = "README.md"

[features]
default = ["std"]

std = ["serde/std"]

[dependencies]
stark-felt = { path = "../stark-felt" }
serde = { version = "1", default-features = false, features = ["derive"] }