[package]
name = "starknet-types-rpc"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["types", "math", "crypto"]
keywords = ["stark", "zkp", "cairo"]
description = "Starknet RPC types."
readme = "README.md"

[features]
default = ["std"]

std = ["serde/std", "starknet-types-core/std"]

[dependencies]
starknet-types-core = { path = "../starknet-types-core", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"