[package]
name = "starknet-types-rpc"
version = "0.7.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/starknet-io/types-rs"
repository = "https://github.com/starknet-io/types-rs"
categories = ["types", "math", "crypto"]
keywords = ["stark", "zkp", "cairo"]
description = "Starknet RPC types."
readme = "README.md"
exclude = [
    "src/v0_5_0/*.json",
    "src/v0_5_0/*.toml",
    "src/v0_6_0/*.json",
    "src/v0_6_0/*.toml",
]

[features]
default = ["std"]

std = ["serde/std", "starknet-types-core/std"]

[dependencies]
starknet-types-core = { path = "../starknet-types-core", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
